# fastapi_graphql

./: .flake8  .gitignore  README.md  client.html  main.py  poetry_scripts.sh  pyproject.toml  ws_client.html
src/: bus.py  db.py  gql.py  main.py  migrate.py  models.py  other.py  redis.py  redis_app.py
