[scripts]
lint = "poetry run black . && poetry run mypy . && poetry run flake8 ."
start = "poetry run uvicorn main:app --reload"

[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.31.0"
uvicorn = "^0.8.3"
graphene = "^2.1.6"

[tool.poetry.dev-dependencies]
mypy = "^0.711.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
ipython = "^7.6.1"
flake8 = "^3.7.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
