[scripts]
lint = "poetry run black . && poetry run mypy . && poetry run flake8 ."
start = "poetry run uvicorn main:app --reload"

[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
fastapi = ">=0.36.0"
uvicorn = ">=0.8.3"
graphene = "^2.1.6"
aioredis = "^1.2"
httpx = ">=0.7.2"
sqlalchemy = "^1.3"
gino = ">=0.8.3"
aiodataloader = "^0.1.2"

[tool.poetry.dev-dependencies]
mypy = ">=0.730.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
ipython = "^7.6.1"
flake8 = "^3.7.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
